[tool.poetry]
name = "chimera-gw"
version = "1.0.3"
description = "Combined Hierarchical Inference Model for Electromagnetic and gRavitational-wave Analysis"
authors = ["Nicola Borghi <nicola.borghi6@unibo.it>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/CosmoStatGW/CHIMERA"
documentation = "https://gwfast.readthedocs.io/en/latest/"
packages = [ 
    {include = "CHIMERA"},
]
include = [
    { path = "data/LVK", format = ["sdist", "wheel"] },
]

[tool.poetry.dependencies]
python = ">=3.8"
numpy = ">=1.16"
scipy = ">=1.7"
astropy = "^5.2"
h5py = "^3.5"
healpy = "^1.14"
schwimmbad = "^0.3.2"
matplotlib = "^3.4"
jax = {extras = ["cpu"], version = "*"}
scikit-learn = "^0.24"

# Optional for docs
sphinx = { version = "5.3.0", optional = true }
sphinx-book-theme = { version = ">=1.0", optional = true }
nbsphinx = { version = ">=0.8.10", optional = true }
myst-parser = { version = "^0.18.1", optional = true }
readthedocs-sphinx-search = { version = "^0.1.2", optional = true }
docutils = { version = "^0.17.1", optional = true }
requests = "^2.31.0"

[tool.poetry.extras]
docs = ["sphinx", "sphinx-book-theme", "nbsphinx", "myst-parser", "readthedocs-sphinx-search", "docutils"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
